fixes #18 - pulls down the grass img to allow readability and adds glow to css in case needed afterwards

--- a/css/theme/osgeo.css
+++ b/css/theme/osgeo.css
@@ -65,6 +65,9 @@ body {
     width: 35%;
 }
 
+.glow {
+    text-shadow: 0 0 20px white, 0 0 18px white, 0 0 16px white, 0 0 14px white, 0 0 12px white, 0 0 10px white, 0 0 8px white, 0 0 6px white;
+}
 /*********************************************
  * HEADERS
  *********************************************/
